# gbzip

./: CMakeLists.txt  README.md  SECURITY.md
include/: diff.h  gbzip.h  gbzip_zip.h  logging.h  tui.h  utils.h  zipignore.h
src/: diff.c  logging.c  main.c  tui.c  utils.c  zip.c  zipignore.c
tests/: CMakeLists.txt  test_main.c
